[gd_scene load_steps=5 format=3 uid="uid://dbeoklycx3l8t"]

[ext_resource type="Script" path="res://Scripts/player_1.gd" id="1_1smdy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2bo0q"]
size = Vector2(139, 147)

[sub_resource type="CanvasTexture" id="CanvasTexture_86nxr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sv3jj"]
size = Vector2(132.499, 149)

[node name="Player 1" type="CharacterBody2D"]
z_index = 3
position = Vector2(70, 70)
rotation = 1.5708
script = ExtResource("1_1smdy")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0.499863, -0.500175)
shape = SubResource("RectangleShape2D_2bo0q")

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(1.52783e-06, 0.615124, 0.616666, 1)
position = Vector2(0.338543, -0.50782)
scale = Vector2(137.772, 148.945)
texture = SubResource("CanvasTexture_86nxr")

[node name="Marker2D2" type="Marker2D" parent="."]
position = Vector2(111, -51.0004)

[node name="Polygon2D2" type="Polygon2D" parent="."]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(112, -43.0004, 143, -58.0005, 116, -75.0004, 63.9997, -74.0002, 33.9997, -74.0001, 34.9998, -45.0001)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Player 1 Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player 1 Hitbox"]
position = Vector2(-1.74999, 1.50002)
shape = SubResource("RectangleShape2D_sv3jj")

[node name="attack_cooldown" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Player 1 Hitbox" to="." method="_on_player_1_hitbox_body_entered"]
[connection signal="body_exited" from="Player 1 Hitbox" to="." method="_on_player_1_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
